Update API spec
